# LFBA

./: .gitattributes  .gitignore  README.md  main.py  main_lfba.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
attack/: add_trigger.py  add_trigger_replace.py  attack.py
dataset/: dataset.py  utils.py
models/: CIFAR10_models.py  NUSWIDE_models.py  PHISHING_models.py  UCIHAR_models.py
utils/: trainer.py  utils.py
