[project]
name = "LFBA"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "UnoUzume", email = "38970229+UnoUzume@users.noreply.github.com" },
]
dependencies = []
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
